# video-summary

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.json
.claude/skills/: transcript-quality.md
app/: config.py  main.py  templates.py
app/audio/: extractor.py  transcriber.py
app/db/: database.py  models.py
app/download/: downloader.py  router.py  schema.py
app/summary/: prompt.py  summarizer.py
app/tasks/: pipeline.py
app/web/: router.py
app/web/templates/: base.html  index.html  task.html
docs/: 01-video-download.md  02-audio-transcribe.md  05-harness-capabilities.md  architecture.md
tests/: conftest.py  test_ai_recovery.py  test_audio.py  test_download.py
video-summary/: AGENTS.md  plan.md
video-summary/app/download/: downloader.py  router.py
video-summary/docs/: 03-summary-frontend.md  04-harness-environment.md
video-summary/scripts/: lint-architecture.py
video-summary/tests/: test_audio.py  test_summary.py
